Fix chat icon alignment

--- a/frontend/src/components/ChannelPage/ChannelPage.css
+++ b/frontend/src/components/ChannelPage/ChannelPage.css
@@ -327,7 +327,7 @@ i span {
   /* margin-left: 100px; */
   /* margin-bottom: 26.5px; */
   margin-top: 20px;
-  align-items: center;
+  align-items: flex-start;
   background-color: #232529;
   align-self: center;
 
@@ -381,7 +381,8 @@ i span {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  margin-left: -7px;
+  margin-left: 16px;
+  /* margin-left: -7px; */
   /* margin: 10px; */
 }
 
@@ -507,6 +508,7 @@ font-size: 18px;
   align-items: center;
   justify-content: center;
   padding: 8px;
+  margin-left: -4px;
   margin-top: -8px;
 }
 .fa-xs:hover {
